[package]
name = "puree-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"] }
quick-xml = "0.31.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_regex = "1.1.0"
thiserror = "1.0.58"
toml = "0.8.12"

[[bin]]
name = "puree"
path = "src/main.rs"
